# solana-dapp-template

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: test-anchor.yml  test-web.yml
anchor/: .gitignore  Anchor.toml  tsconfig.json
anchor/programs/voting/: Cargo.toml
anchor/programs/voting/src/: lib.rs
anchor/programs/voting/tests/: test.rs  test.rs.bak
anchor/src/: voting-exports.ts
anchor/tests/: bankrun.test.ts  voting.test.ts
src/app/: layout.tsx
src/app/api/vote/: route.ts
src/components/account/: account-data-access.tsx  account-detail-feature.tsx  account-list-feature.tsx  account-ui.tsx
src/components/cluster/: cluster-data-access.tsx  cluster-feature.tsx  cluster-ui.tsx
src/components/dashboard/: dashboard-feature.tsx
src/components/solana/: solana-provider.tsx
src/components/ui/: ui-layout.tsx
src/components/voting/: voting-data-access.tsx  voting-feature.tsx  voting-ui.tsx
